--- a/HedgeModManager/Languages/en-US.xaml
+++ b/HedgeModManager/Languages/en-US.xaml
@@ -92,7 +92,7 @@
     <system:String x:Key="SettingsUIOpenGameDir"    >Open Game Directory</system:String>
     <system:String x:Key="SettingsUIEnableML"       >Enable mod loader</system:String>
     <system:String x:Key="SettingsUIEnableDebug"    >Enable debug console</system:String>
-    <system:String x:Key="SettingsUIEnableSRedir"   >Enable save file redirection</system:String>
+    <system:String x:Key="SettingsUIEnableSRedir"   >Redirect default save file</system:String>
     <system:String x:Key="SettingsUIUseLauncher"    >Use game launcher</system:String>
     <system:String x:Key="SettingsUILabelLoaders"   >Loaders:</system:String>
     <system:String x:Key="SettingsUILabelGame"      >Game:</system:String>
