--- a/HedgeModManager/Languages/en-AU.xaml
+++ b/HedgeModManager/Languages/en-AU.xaml
@@ -99,17 +99,18 @@
     <system:String x:Key="SettingsUILabelProfile"   >Profile:</system:String>
     <system:String x:Key="SettingsUILabelMDir"      >Mods Directory:</system:String>
     <!--   Hedge Mod Manager -->
-    <system:String x:Key="SettingsUIHMMHeader"       >Hedge Mod Manager</system:String>
-    <system:String x:Key="SettingsUICheckMLUpdate"   >Automatically check for Hedge Mod Manager updates</system:String>
-    <system:String x:Key="SettingsUICheckCLUpdate"   >Automatically check for mod loader updates</system:String>
-    <system:String x:Key="SettingsUICheckModUpdates" >Automatically check for mod updates</system:String>
-    <system:String x:Key="SettingsUIKeepHMMOpen"     >Keep Hedge Mod Manager open after starting a game</system:String>
-    <system:String x:Key="SettingsUICodesUseTreeView">Use tree view for codes list</system:String>
-    <system:String x:Key="SettingsUICheckHMMUpdate"  >Check for Updates</system:String>
-    <system:String x:Key="SettingsUIAboutHMM"        >About Hedge Mod Manager</system:String>
-    <system:String x:Key="SettingsUILanguage"        >Language:</system:String>
-    <system:String x:Key="SettingsUITheme"           >Theme:</system:String>
-    <system:String x:Key="SettingsUIReleaseChannel"  >Update Channel:</system:String>
+    <system:String x:Key="SettingsUIHMMHeader"          >Hedge Mod Manager</system:String>
+    <system:String x:Key="SettingsUICheckMLUpdate"      >Automatically check for Hedge Mod Manager updates</system:String>
+    <system:String x:Key="SettingsUICheckCLUpdate"      >Automatically check for mod loader updates</system:String>
+    <system:String x:Key="SettingsUICheckModUpdates"    >Automatically check for mod updates</system:String>
+    <system:String x:Key="SettingsUIUpdateCodesOnLaunch">Automatically update community codes on launch</system:String>
+    <system:String x:Key="SettingsUIKeepHMMOpen"        >Keep Hedge Mod Manager open after starting a game</system:String>
+    <system:String x:Key="SettingsUICodesUseTreeView"   >Use tree view for codes list</system:String>
+    <system:String x:Key="SettingsUICheckHMMUpdate"     >Check for Updates</system:String>
+    <system:String x:Key="SettingsUIAboutHMM"           >About Hedge Mod Manager</system:String>
+    <system:String x:Key="SettingsUILanguage"           >Language:</system:String>
+    <system:String x:Key="SettingsUITheme"              >Theme:</system:String>
+    <system:String x:Key="SettingsUIReleaseChannel"     >Update Channel:</system:String>
     <system:String x:Key="SettingsUIChangingChannelTitle" >Changing Release Channels</system:String>
     <system:String x:Key="SettingsUIChangeChannelRel" xml:space="preserve">You are about to change to the Release channel.&#x0a;&#x0a;Are you sure you want to continue? Hedge Mod Manager will need to restart to change channels.</system:String>
     <system:String x:Key="SettingsUIChangeChannelDev" xml:space="preserve">You are about to change to the Development channel. This channel may contain untested features and bugs.&#x0a;&#x0a;Are you sure you want to continue? Hedge Mod Manager will need to restart to change channels.</system:String>
