Credited user @teabarley for Korean translation

--- a/HedgeModManager/UI/AboutWindow.xaml
+++ b/HedgeModManager/UI/AboutWindow.xaml
@@ -78,6 +78,7 @@
                         <Label Content="tuanpingas"/>
                         <Label Content="NextinHKRY"/>
                         <Label Content="OctSquid"/>
+                        <Label Content="teabarley"/>
                     </StackPanel>
                     <StackPanel Grid.Column="1">
                         <Label Content="Portuguese translations"/>
@@ -95,6 +96,7 @@
                         <Label Content="Vietnamese translation"/>
                         <Label Content="Italian translation"/>
                         <Label Content="Japanese translation"/>
+                        <Label Content="Korean translation"/>
                     </StackPanel>
                 </Grid>
             </ScrollViewer>
